Add feed link to the channel

--- a/config/londonliving.rssConfig.json
+++ b/config/londonliving.rssConfig.json
@@ -2,6 +2,7 @@
     "title": "Christ Church Mayfair – London:Living?",
     "description": "Hear from different London voices on their experience of uncertainty and where they find a solid hope.",
     "author": "Christ Church Mayfair",
+    "feedUrl": "https://rss.christchurchmayfair.org/londonliving",
     "email": "info@christchurchmayfair.org",
     "mainSiteUrl": "https://christchurchmayfair.org/londonliving",
     "imageUrl": "https://s3-eu-west-1.amazonaws.com/media.christchurchmayfair.org/londonliving/LLpodcastartwork_small.jpg",
