--- a/package.json
+++ b/package.json
@@ -13,21 +13,15 @@
   "scripts": {
     "build": "npx tsc",
     "generate_rss": "npx ./dist/main.js",
-    "build_and_generate": "npx tsc && npx ./dist/main.js",
-    "export_graphcool_to_sanity_ndjson": "npx tsc && npx ./dist/export_graphcool_to_sanity_ndjson.js"
+    "build_and_generate": "npx tsc && npx ./dist/main.js"
   },
   "dependencies": {
     "@sanity/client": "^1.149.7",
     "@types/date-fns": "^2.6.0",
     "@types/node-fetch": "^2.5.5",
     "@types/rimraf": "^3.0.0",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.6.8",
-    "apollo-link-http": "^1.5.17",
     "cross-fetch": "^3.0.4",
     "date-fns": "^2.12.0",
-    "graphql": "^14.6.0",
-    "graphql-tag": "^2.10.3",
     "node-fetch": "^2.6.0",
     "rimraf": "^3.0.2",
     "xmlbuilder": "^15.1.1"
