--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "ccm_static_rss",
-  "version": "1.0.0",
-  "description": "code to generate static RSS for CCM",
-  "main": "index.ts",
-  "author": "Tom Duckering",
-  "license": "MIT",
-  "private": false,
-  "devDependencies": {
-    "tslint": "^6.1.1",
-    "typescript": "^3.8.3"
-  },
-  "scripts": {
-    "build": "npx tsc",
-    "generate_rss": "npx ./dist/main.js",
-    "build_and_generate": "npx tsc && npx ./dist/main.js"
-  },
-  "dependencies": {
-    "@sanity/client": "^1.149.7",
-    "@types/date-fns": "^2.6.0",
-    "@types/node-fetch": "^2.5.5",
-    "@types/rimraf": "^3.0.0",
-    "cross-fetch": "^3.0.4",
-    "date-fns": "^2.12.0",
-    "node-fetch": "^2.6.0",
-    "rimraf": "^3.0.2",
-    "xmlbuilder": "^15.1.1"
-  }
+    "name": "ccm_static_rss",
+    "version": "1.0.0",
+    "description": "code to generate static RSS for CCM",
+    "main": "index.ts",
+    "author": "Tom Duckering",
+    "license": "MIT",
+    "private": false,
+    "devDependencies": {
+        "prettier": "^2.6.2",
+        "tslint": "^6.1.1",
+        "typescript": "^3.8.3"
+    },
+    "scripts": {
+        "build": "npx tsc",
+        "generate_rss": "npx ./dist/main.js",
+        "build_and_generate": "npx tsc && npx ./dist/main.js"
+    },
+    "dependencies": {
+        "@sanity/client": "^1.149.7",
+        "@types/date-fns": "^2.6.0",
+        "@types/node-fetch": "^2.5.5",
+        "@types/rimraf": "^3.0.0",
+        "cross-fetch": "^3.0.4",
+        "date-fns": "^2.12.0",
+        "node-fetch": "^2.6.0",
+        "rimraf": "^3.0.2",
+        "xmlbuilder": "^15.1.1"
+    }
 }
