--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     },
     "scripts": {
         "build": "npx tsc",
-        "generate_rss": "npx ./dist/main.js",
-        "build_and_generate": "npx tsc && npx ./dist/main.js"
+        "generate_rss": "node ./dist/main.js",
+        "build_and_generate": "npx tsc && node ./dist/main.js"
     },
     "dependencies": {
         "@sanity/client": "^1.149.7",
