--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
     "private": false,
     "devDependencies": {
         "prettier": "^2.6.2",
+        "ts-node": "^10.9.2",
         "tslint": "^6.1.1",
         "typescript": "^4.6.3"
     },
     "scripts": {
-        "build": "npx tsc",
-        "generate_rss": "node ./dist/main.js",
-        "build_and_generate": "npx tsc && node ./dist/main.js"
+        "build": "ts-node ./main.ts"
     },
     "dependencies": {
         "@sanity/client": "^1.149.7",
